# TodoListBackend

./: .gitignore  README.md  pyproject.toml  run.cmd  run.sh
configs/: dbserver.json  flaskapp.json
docs/: conf.py  index.rst
tests/models/classes/: test_BaseODM.py
todolist_backend/: __init__.py  __main__.py  cli.py  database.py  info.py
todolist_backend/models/: __init__.py  account.py  base_odm.py  classes.py  commented_odm.py  embedded_comment.py  embedded_completion.py  embedded_tag.py  tagged_odm.py  todo_item.py
todolist_backend/server/: __init__.py  accounts.py  app.py  app_component.py  son.py
