[tool.poetry]
name = "todolist_backend"
version = "0.1.0"
description = "Backend for TodoList"
authors = ["RenoirTan <renoirtan2005@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.0"
dnspython = "^2.0"
pymongo = "^3.11"
waitress = "^1.4"
mongoengine = "^0.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
Sphinx = "^4.0"
sphinx-rtd-theme = "^0.5.2"
numpydoc = "^1.1"

[tool.black]
line-length = 80
include = ".pyi?$"
exclude = """
.eggs/
.git/
build
dist
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
